<resources>

    <string name="app_name">LetsChat</string>
	<string name="password_hint">Please input password</string>
	<string name="login">Log in</string>
	<string name="signup">Sign up</string>
	<string name="name_hint">Name</string>
	<string name="cell_phone_number">Cell phone number</string>
	<string name="send">Send</string>
	<string name="tab_letschat">LetsChat</string>
	<string name="tab_contacts">Contacts</string>
	<string name="tab_discover">Discover</string>
	<string name="tab_me">Me</string>
	<string name="action_bar_search_contact">Search</string>
	<string name="add">Add</string>
	<string name="chats">Chats</string>
	<string name="add_contact">Add contact</string>
	<string name="select_contact">Select contact</string>
	<string name="new_chat">New chat</string>
	<string name="search">Search:</string>
	<string name="search_contact_no_result">No result</string>
	<string name="search_contact_result">Search result</string>
	<string name="search_contact">Search contact</string>
	<string name="search_contact_hint">Phone</string>
	<string name="phone_number">Phone number</string>
	<string name="enter_password">Enter password</string>
	<string name="create_account_error">Create account error</string>
	<string name="account_already_exists">Account already exists</string>
	<string name="login_error">Login error</string>
	<string name="invalid_credentials">Invalid username/password</string>
	<string name="login_success">Login success</string>
	<string name="added">Added</string>
	<string name="accept">Accept</string>
	<string name="accepted">Accepted</string>
	<string name="new_friends">New friends</string>
	<string name="add_contact_text">wants to add you as a friend</string>
	<string name="contact_request_sent">Request sent, waiting for acceptance...</string>
	<string name="sending_contact_request_error">Sending request error</string>
	<string name="acceptance_text">I\'v accepted your request, let\'s chat</string>
	<string name="send_message">Send message</string>
	<string name="contact_profile">Contact profile</string>
	<string name="wait_for_acceptance">waiting for acceptance</string>
	<string name="delete">Delete</string>
	<string name="search_user_error">Search user error</string>
	<string name="no_network_connected">No network connected</string>
	<string name="new_messages"> new messages</string>
	<string name="settings">Setttings</string>
	<string name="status">Status</string>
	<string name="current_status">Your current status</string>
	<string name="select_status">Select your new status</string>
	<string name="default_status">Hey</string>
	<string name="status_available">Available</string>
	<string name="status_busy">Busy</string>
	<string name="status_at_school">At school</string>
	<string name="status_at_work">At work</string>
	<string name="status_in_a_meeting">In a meeting</string>
	<string name="no_status">***no status***</string>
	<string name="set_status_error">Set status error</string>
	<string name="update_status_text">update your status</string>
	<string name="profile_photo">Profile photo</string>
	<string name="conversation_list_empty_text">To start messaging contacts who have \n Letschat,tap on the \"New message\" \n icon at the top of your screen</string>
</resources>
